--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_all_lists">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.inlist.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_all_lists"
+        android:name="com.example.inlist.ui.allLists.AllListsFragment"
+        android:label="@string/title_all_lists"
+        tools:layout="@layout/fragment_all_lists" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.inlist.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_current_list"
+        android:name="com.example.inlist.ui.currentList.CurrentListFragment"
+        android:label="@string/title_current_list"
+        tools:layout="@layout/fragment_current_list" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.inlist.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_settings"
+        android:name="com.example.inlist.ui.settings.SettingsFragment"
+        android:label="@string/title_settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
