Correct UI for current list and move fragments to packages

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_all_lists"
-        android:name="com.example.inlist.ui.allLists.AllListsFragment"
+        android:name="com.example.inlist.allLists.presentation.AllListsFragment"
         android:label="@string/title_all_lists"
         tools:layout="@layout/fragment_all_lists" />
 
     <fragment
         android:id="@+id/navigation_current_list"
-        android:name="com.example.inlist.ui.currentList.CurrentListFragment"
+        android:name="com.example.inlist.currentList.presentation.CurrentListFragment"
         android:label="@string/title_current_list"
         tools:layout="@layout/fragment_current_list" />
 
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.example.inlist.ui.settings.SettingsFragment"
+        android:name="com.example.inlist.settings.presentation.SettingsFragment"
         android:label="@string/title_settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
