--- a/app/src/main/res/layout/fragment_all_lists.xml
+++ b/app/src/main/res/layout/fragment_all_lists.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.allLists.AllListsFragment">
+    tools:context=".allLists.presentation.AllListsFragment">
 
     <TextView
         android:id="@+id/text_all_lists"
