--- a/app/src/main/res/layout/fragment_current_list.xml
+++ b/app/src/main/res/layout/fragment_current_list.xml
@@ -4,22 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
+    android:layout_margin="16dp"
     tools:context=".currentList.presentation.CurrentListFragment">
-
-    <TextView
-        android:id="@+id/text_current_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="Имя списка"
-        android:textSize="12pt"
-        app:layout_constraintBottom_toTopOf="@id/active_items_rv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0"
-        android:visibility="gone"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/active_items_rv"
@@ -28,7 +14,7 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_current_list"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         tools:itemCount="10"
         tools:listitem="@layout/view_list_item" />
@@ -39,6 +25,5 @@
         android:layout_height="wrap_content"
         android:text="@string/add_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginVertical="64dp"/>
+        app:layout_constraintRight_toRightOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
