--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
+    android:orientation="vertical"
     tools:context=".settings.presentation.SettingsFragment">
 
     <TextView
-        android:id="@+id/text_settings"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:id="@+id/settings_account_tv"
+        style="@style/SettingsMenuTv"
+        android:text="@string/account_settings" />
+
+    <TextView
+        android:id="@+id/settings_theme_tv"
+        style="@style/SettingsMenuTv"
+        android:text="@string/theme_settings" />
+
+    <TextView
+        android:id="@+id/settings_support_tv"
+        style="@style/SettingsMenuTv"
+        android:text="@string/support" />
+
+    <TextView
+        android:id="@+id/settings_share"
+        style="@style/SettingsMenuTv"
+        android:text="@string/share_app" />
+
+    <TextView
+        android:id="@+id/settings_about_tv"
+        style="@style/SettingsMenuTv"
+        android:text="@string/about_app" />
+</LinearLayout>
