--- a/app/src/main/res/layout/fragment_current_list.xml
+++ b/app/src/main/res/layout/fragment_current_list.xml
@@ -4,9 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
     tools:context=".currentList.presentation.CurrentListFragment">
 
+    <View
+        android:id="@+id/current_list_background_v"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#99000000"
+        android:visibility="gone" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/active_items_rv"
         android:layout_width="match_parent"
@@ -18,16 +23,19 @@
         app:layout_constraintBottom_toTopOf="@id/add_item_btn"
         app:layout_constraintVertical_bias="0.0"
         tools:itemCount="10"
+        android:layout_margin="16dp"
         tools:listitem="@layout/view_list_item" />
 
     <View
+        android:id="@+id/current_list_divider_v"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/deleted_items_rv"
         app:layout_constraintTop_toBottomOf="@id/active_items_rv"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/deleted_items_rv"
@@ -40,6 +48,7 @@
         app:layout_constraintTop_toBottomOf="@+id/active_items_rv"
         app:layout_constraintVertical_bias="0.0"
         tools:itemCount="10"
+        android:layout_margin="16dp"
         tools:listitem="@layout/view_list_item">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -56,7 +65,8 @@
         app:layout_constraintRight_toRightOf="parent"
         android:visibility="gone"
         android:imeOptions="actionDone"
-        app:layout_constraintTop_toBottomOf="@id/active_items_rv" />
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <Button
         android:id="@+id/add_item_btn"
@@ -64,5 +74,6 @@
         android:layout_height="wrap_content"
         android:text="@string/add_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="16dp"
         app:layout_constraintRight_toRightOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
