--- a/app/src/main/res/layout/fragment_all_lists.xml
+++ b/app/src/main/res/layout/fragment_all_lists.xml
@@ -73,7 +73,7 @@
         android:id="@+id/add_item_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_button_text"
+        android:text="@string/btn_add"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
         app:layout_constraintRight_toRightOf="parent" />
