--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/settings_account_tv"
         style="@style/SettingsMenuTv"
-        android:text="@string/account_settings"
+        android:text="@string/lbl_account_settings"
         app:drawableEndCompat="@drawable/ic_settings" />
 
     <LinearLayout
@@ -25,7 +25,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/dark_theme"
+            android:text="@string/lbl_dark_theme"
             android:textSize="16sp" />
 
         <androidx.appcompat.widget.SwitchCompat
@@ -41,18 +41,18 @@
     <TextView
         android:id="@+id/settings_support_tv"
         style="@style/SettingsMenuTv"
-        android:text="@string/support"
+        android:text="@string/lbl_support"
         app:drawableEndCompat="@drawable/ic_support" />
 
     <TextView
         android:id="@+id/settings_share"
         style="@style/SettingsMenuTv"
-        android:text="@string/share_app"
+        android:text="@string/lbl_share_app"
         app:drawableEndCompat="@drawable/ic_share" />
 
     <TextView
         android:id="@+id/settings_about_tv"
         style="@style/SettingsMenuTv"
-        android:text="@string/about_app"
+        android:text="@string/lbl_about_app"
         app:drawableEndCompat="@drawable/ic_arrow_forward" />
 </LinearLayout>
