--- a/app/src/main/res/layout/fragment_current_list.xml
+++ b/app/src/main/res/layout/fragment_current_list.xml
@@ -50,7 +50,7 @@
         app:layout_constraintVertical_bias="0.0"
         tools:itemCount="10"
         android:layout_margin="16dp"
-        tools:listitem="@layout/view_list_item">
+        tools:listitem="@layout/view_deleted_item">
 
     </androidx.recyclerview.widget.RecyclerView>
 
