--- a/app/src/main/res/layout/view_deleted_item.xml
+++ b/app/src/main/res/layout/view_deleted_item.xml
@@ -5,12 +5,13 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
+
     <TextView
         android:id="@+id/list_item_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
-        android:textColor="@color/black"
-        tools:text="Элемент списка" />
-
+        android:textColor="@color/grey"
+        tools:text="Элемент списка">
+    </TextView>
 </LinearLayout>
