--- a/app/src/main/res/layout/fragment_current_list.xml
+++ b/app/src/main/res/layout/fragment_current_list.xml
@@ -27,24 +27,13 @@
         android:layout_margin="16dp"
         tools:listitem="@layout/view_list_item" />
 
-    <View
-        android:id="@+id/current_list_divider_v"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        app:layout_constraintBottom_toTopOf="@+id/deleted_items_rv"
-        app:layout_constraintTop_toBottomOf="@id/active_items_rv"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/deleted_items_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/add_item_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/active_items_rv"
         app:layout_constraintVertical_bias="0.0"
@@ -76,5 +65,6 @@
         android:text="@string/btn_add"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
