--- a/app/src/main/res/layout/view_deleted_item.xml
+++ b/app/src/main/res/layout/view_deleted_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,10 +9,17 @@
 
     <TextView
         android:id="@+id/list_item_tv"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
-        android:textColor="@color/grey"
-        tools:text="Элемент списка">
-    </TextView>
+        android:textColor="@color/black"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        tools:text="Элемент списка" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:gravity="center" />
 </LinearLayout>
