--- a/app/src/main/res/layout/view_list_item.xml
+++ b/app/src/main/res/layout/view_list_item.xml
@@ -7,10 +7,17 @@
 
     <TextView
         android:id="@+id/list_item_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:textColor="@color/black"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
         tools:text="Элемент списка" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center" />
 
 </LinearLayout>
