--- a/app/src/main/res/layout/fragment_all_lists.xml
+++ b/app/src/main/res/layout/fragment_all_lists.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".currentList.presentation.CurrentListFragment">
+    tools:context=".allLists.AllListsFragment">
 
     <View
         android:id="@+id/current_list_background_v"
@@ -25,7 +25,7 @@
         app:layout_constraintVertical_bias="0.0"
         tools:itemCount="10"
         android:layout_margin="16dp"
-        tools:listitem="@layout/view_list_item" />
+        tools:listitem="@layout/view_list" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/deleted_items_rv"
@@ -39,7 +39,7 @@
         app:layout_constraintVertical_bias="0.0"
         tools:itemCount="10"
         android:layout_margin="16dp"
-        tools:listitem="@layout/view_deleted_item">
+        tools:listitem="@layout/view_list">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -60,10 +60,12 @@
 
     <Button
         android:id="@+id/add_item_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btn_add"
+        android:text="@string/btn_new_list"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textAllCaps="false"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
