--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/navigation_all_lists"
+        android:icon="@drawable/ic_all_lists"
+        android:title="@string/title_all_lists" />
+
+    <item
         android:id="@+id/navigation_current_list"
         android:icon="@drawable/ic_current_list"
         android:title="@string/title_current_list" />
