--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,6 +6,12 @@
     app:startDestination="@id/navigation_current_list">
 
     <fragment
+        android:id="@+id/navigation_all_lists"
+        android:name="com.example.inlist.allLists.AllListsFragment"
+        android:label="@string/title_all_lists"
+        tools:layout="@layout/fragment_all_lists" />
+
+    <fragment
         android:id="@+id/navigation_current_list"
         android:name="com.example.inlist.currentList.presentation.CurrentListFragment"
         android:label="@string/title_current_list"
