Add allLists and correct drawable

--- a/app/src/main/res/drawable/ic_all_lists.xml
+++ b/app/src/main/res/drawable/ic_all_lists.xml
@@ -1,14 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    android:height="32dp"
+    android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="32">
+    android:viewportHeight="24">
   <group>
-    <clip-path
-        android:pathData="M0,4h24v24h-24z"/>
+    <clip-path android:pathData="M0,0h24v24h-24z" />
     <path
-        android:pathData="M21,15.25V16.75C21,17.164 20.664,17.5 20.25,17.5H3.75C3.336,17.5 3,17.164 3,16.75V15.25C3,14.836 3.336,14.5 3.75,14.5H20.25C20.664,14.5 21,14.836 21,15.25ZM20.25,20.5H3.75C3.336,20.5 3,20.836 3,21.25V22.75C3,23.164 3.336,23.5 3.75,23.5H20.25C20.664,23.5 21,23.164 21,22.75V21.25C21,20.836 20.664,20.5 20.25,20.5ZM20.25,8.5H3.75C3.336,8.5 3,8.836 3,9.25V10.75C3,11.164 3.336,11.5 3.75,11.5H20.25C20.664,11.5 21,11.164 21,10.75V9.25C21,8.836 20.664,8.5 20.25,8.5Z"
-        android:fillColor="#121712"
+        android:pathData="M21,11.25V12.75C21,13.164 20.664,13.5 20.25,13.5H3.75C3.336,13.5 3,13.164 3,12.75V11.25C3,10.836 3.336,10.5 3.75,10.5H20.25C20.664,10.5 21,10.836 21,11.25ZM20.25,16.5H3.75C3.336,16.5 3,16.836 3,17.25V18.75C3,19.164 3.336,19.5 3.75,19.5H20.25C20.664,19.5 21,19.164 21,18.75V17.25C21,16.836 20.664,16.5 20.25,16.5ZM20.25,4.5H3.75C3.336,4.5 3,4.836 3,5.25V6.75C3,7.164 3.336,7.5 3.75,7.5H20.25C20.664,7.5 21,7.164 21,6.75V5.25C21,4.836 20.664,4.5 20.25,4.5Z"
+        android:fillColor="?attr/colorOnSecondary"
         android:fillType="evenOdd"/>
   </group>
 </vector>
