--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
     <color name="green">#407D21</color>
+    <color name="medium_green">#6B8F57</color>
+    <color name="light_green">#EDF2E8</color>
+    <color name="font_green">#121A0F</color>
+    <color name="dark_green">#172112</color>
+    <color name="white">#FAFAFA</color>
+
+    <color name="purple_200">#FFBB86FC</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="light_green">#D9E3D4</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="grey">#4F000000</color>
-    <color name="white">#FFFFFFFF</color>
+
 </resources>
