--- a/app/src/main/res/layout/fragment_all_lists.xml
+++ b/app/src/main/res/layout/fragment_all_lists.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".allLists.AllListsFragment">
+    tools:context=".allLists.presentation.AllListsFragment">
 
     <View
         android:id="@+id/current_list_background_v"
@@ -16,7 +16,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/active_items_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -26,22 +26,6 @@
         tools:itemCount="10"
         android:layout_margin="16dp"
         tools:listitem="@layout/view_list" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/deleted_items_rv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@+id/add_item_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/active_items_rv"
-        app:layout_constraintVertical_bias="0.0"
-        tools:itemCount="10"
-        android:layout_margin="16dp"
-        tools:listitem="@layout/view_list">
-
-    </androidx.recyclerview.widget.RecyclerView>
 
     <EditText
         android:id="@+id/add_item_et"
@@ -63,9 +47,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/btn_new_list"
+        app:layout_constraintTop_toBottomOf="@id/active_items_rv"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="16dp"
         android:layout_margin="16dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textAllCaps="false"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
