--- a/app/src/main/res/layout/view_list.xml
+++ b/app/src/main/res/layout/view_list.xml
@@ -7,12 +7,12 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/list_item_tv"
+        android:id="@+id/list_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         tools:text="Список"
-        app:drawableStartCompat="@drawable/ic_list"
+        app:drawableStartCompat="@drawable/ic_list_placeholder"
         android:gravity="start|center_vertical"
         android:drawablePadding="4dp"/>
 </LinearLayout>
