--- a/app/src/main/res/layout/fragment_all_lists.xml
+++ b/app/src/main/res/layout/fragment_all_lists.xml
@@ -17,6 +17,7 @@
         android:id="@+id/active_items_rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        style="@style/BaseTextStyle"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,7 +25,6 @@
         app:layout_constraintBottom_toTopOf="@id/add_item_btn"
         app:layout_constraintVertical_bias="0.0"
         tools:itemCount="10"
-        android:layout_margin="16dp"
         tools:listitem="@layout/view_list" />
 
     <EditText
@@ -39,7 +39,6 @@
         app:layout_constraintRight_toRightOf="parent"
         android:visibility="gone"
         android:imeOptions="actionDone"
-        android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <Button
@@ -49,8 +48,6 @@
         android:text="@string/btn_new_list"
         app:layout_constraintTop_toBottomOf="@id/active_items_rv"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginHorizontal="16dp"
-        android:layout_margin="16dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textAllCaps="false"/>
