--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="SettingsMenuTv">
-        <item name="android:textSize">16sp</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingVertical">16dp</item>
-        <item name="android:gravity">center|start</item>
+    <style name="SettingsLargeLabel">
+        <item name="android:paddingTop">20dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:textAppearance">@style/SettingsLabelTextStyle</item>
     </style>
 
+    <style name="SettingsSmallLabel">
+        <item name="android:paddingVertical">16dp</item>
+        <item name="android:textAppearance">@style/ItemTextStyle</item>
+    </style>
 
+    <style name="HeaderTextStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:font">@font/manrope_bold</item>
+    </style>
 
+    <style name="BaseTextStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:font">@font/manrope_medium</item>
+    </style>
+
+    <style name="BaseSmallTextStyle">
+        <item name="android:textSize">14sp</item>
+        <item name="android:font">@font/manrope_regular</item>
+    </style>
+
+    <style name="ButtonTextStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:font">@font/manrope_bold</item>
+    </style>
+
+    <style name="ItemTextStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:font">@font/manrope_regular</item>
+    </style>
+
+    <style name="SettingsLabelTextStyle">
+        <item name="android:textSize">22sp</item>
+        <item name="android:font">@font/manrope_bold</item>
+    </style>
+
+    <style name="MenuTextStyle">
+        <item name="android:textSize">12sp</item>
+        <item name="android:font">@font/manrope_medium</item>
+    </style>
 </resources>
